# quantum_geometric_tensor

./: .gitignore  CMakeLists.txt  COMPLETION_ANALYSIS_REPORT.md  Doxyfile  QGTL_100_PERCENT_COMPLETION_ROADMAP.md  QGTL_COMPLETE_TECHNICAL_ANALYSIS.md  QGTL_DEVELOPMENT_SCHEDULE.md  QGTL_PRODUCTION_READINESS_PLAN.md  QGTL_TECHNICAL_OVERVIEW.md  QGTL_WEBSITE_CONTENT.md  README.md
archive/private/: QGTL_MOONLAB_SELENE_INTEGRATION_ANALYSIS.md
binaries/: mnist_test  test_quantum_gate  test_quantum_geometric_tensor_init  test_tensor_operations
docs/: BEGINNERS_GUIDE.md  BENCHMARKING.md  DATA_LOADING.md  DATA_PREPARATION.md  DISTRIBUTED_COMPUTING.md  ERROR_CORRECTION.md  ERROR_HANDLING.md  ERROR_HANDLING_AND_DEBUGGING.md  EXAMPLES.md  FAQ.md  HARDWARE_ACCELERATION.md  IMPLEMENTING_LEARNING_TASKS.md  INSTALLATION.md  LEARNING_EXAMPLES.md  MEMORY_MANAGEMENT.md  MEMORY_REFACTORING.md  MONITORING.md  NUMERICAL_BACKEND.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TUNING.md  PRODUCTION_MONITORING.md  QUANTUM_CIRCUIT.md  QUANTUM_COMPUTING.md  QUANTUM_DISTRIBUTED.md  QUANTUM_EMULATION.md  QUANTUM_ERROR.md  QUANTUM_GEOMETRIC.md  QUANTUM_HARDWARE.md  QUANTUM_HYBRID.md  QUANTUM_LEARNING_TASKS.md  QUANTUM_LLM_TRAINING.md  QUANTUM_MEMORY.md  QUANTUM_ML.md  QUANTUM_NETWORK.md  QUANTUM_OPTIMIZATION.md  QUANTUM_PERFORMANCE.md  QUANTUM_PHYSICS.md  QUANTUM_SAMPLING.md  QUANTUM_SUPERCOMPUTING.md  (+12 more)
docs/advanced/: DIFFERENTIAL_TRANSFORMER.md  DISTRIBUTED_COMPUTING.md  DISTRIBUTED_TRAINING.md  GEOMETRIC_LEARNING.md  HARDWARE_ACCELERATION.md  LANGUAGE_MODEL.md  PHYSICS.md  QUANTUM_GEOMETRIC.md  QUANTUM_GRAVITY.md  SINGULAR_LEARNING.md  STOCHASTIC_SAMPLING.md  THEORY.md  TOPOLOGICAL_COMPUTING.md  TOPOLOGICAL_ENTROPY.md  index.md
include/quantum_geometric/ai/: quantum_ai_operations.h  quantum_data_pipeline.h  quantum_geometric_attention.h  quantum_geometric_tensor_network.h  quantum_llm_core.h  quantum_llm_operations.h  quantum_stochastic_sampling.h  quantum_topological_neuromorphic.h
include/quantum_geometric/algorithms/: amplitude_amplification.h  grover.h  qaoa.h  shor.h
include/quantum_geometric/config/: mpi_config.h
include/quantum_geometric/core/: accelerate_wrapper.h  access_history.h  access_optimizer.h  action_executor.h  adaptability_analyzer.h  advanced_memory_system.h  alert_manager.h  allocation_analyzer.h  amx_operations.h  balance_analyzer.h  behavior_analyzer.h  bottleneck_detector.h  cache_manager.h  capability_analyzer.h  complex_arithmetic.h  complex_operations.h  complexity_analyzer.h  computational_graph.h  constraint_analyzer.h  contention_manager.h  differential_transformer.h  distribution_analyzer.h  distribution_optimizer.h  dmrg_algorithm.h  effect_analyzer.h  efficiency_analyzer.h  error_codes.h  error_handling.h  execution_analyzer.h  failure_predictor.h  feature_analyzer.h  flexibility_analyzer.h  functionality_analyzer.h  geometric_attention.h  geometric_processor.h  geometry_types.h  hierarchical_matrix.h  hierarchical_tensor.h  impact_analyzer.h  importance_analyzer.h  (+119 more)
include/quantum_geometric/distributed/: action_plan_generator.h  bottleneck_detector.h  communication_optimization.h  communication_optimizer.h  differential_geometry.h  distributed_training.h  distributed_training_manager.h  effectiveness_analyzer.h  elastic_scaling.h  feature_extractor.h  feature_history.h  geometric_feature_extractor.h  gradient_optimizer.h  insight_generator.h  memory_optimization.h  ml_model.h  mpi_initialization.h  optimization_suggester.h  pattern_detector.h  pattern_recognition_model.h  pattern_similarity.h  performance_monitor.h  pipeline_parallel.h  prediction_model.h  process_management.h  (+10 more)
src/cuda/: attention_cuda.cu  differential_transformer_cuda.cu  quantum_field_cuda.cu  quantum_geometric_cuda.cu  quantum_geometric_stabilizer.cu  quantum_geometric_tensor.cu  quantum_phase_cuda.cu  stochastic_sampling_cuda.cu  tensor_operations_cuda.cu
src/metal/: differential_transformer_metal.metal  differential_transformer_metal.mm  metal_common.h  metal_common.mm  mnist_metal.metal  mnist_metal.mm  quantum_field_metal.metal  quantum_field_metal.mm  quantum_geometric_benchmark.metal  quantum_geometric_compile.metal  quantum_geometric_distributed.metal  quantum_geometric_error.metal  quantum_geometric_hardware.metal  quantum_geometric_hybrid.metal  quantum_geometric_integration.metal  quantum_geometric_metal.metal  quantum_geometric_metal.mm  quantum_geometric_optimizer.metal  quantum_geometric_pipeline.metal  quantum_geometric_production.metal  quantum_geometric_shaders.metal  quantum_geometric_stabilizer.metal  quantum_geometric_syndrome.metal  quantum_geometric_syndrome.mm  quantum_geometric_tensor.metal  quantum_geometric_tensor.mm  quantum_geometric_transformer.metal  quantum_geometric_validate.metal  quantum_phase_metal.mm  stochastic_sampling_metal.metal  stochastic_sampling_metal.mm  tensor_operations_metal.metal  tensor_operations_metal.mm
tests/: test_advanced_features.c  test_anyon_charge.c  test_anyon_correction.c  test_anyon_detection.c  test_anyon_fusion.c  test_anyon_operations.c  test_anyon_tracking.c  test_basic_topological_protection.c  test_cifar10_quantum_learning.c  test_classical_vs_quantum.c  test_complexity_analyzer.c  test_config.h  test_config.h.in  test_data_loader.c  test_dataset_loaders.c  test_differential_transformer.c  test_distributed_failure_recovery.c  test_dwave_backend_optimized.c  test_error_correction_monitor.c  test_error_correlation.c  test_error_patterns.c  test_error_prediction.c  test_error_syndrome.c  test_error_weight.c  test_floquet_surface_code.c  test_full_topological_protection.c  test_hardware_operations.c  test_heavy_hex_surface_code.c  test_helpers.h  test_ibm_backend_optimized.c  test_integration.c  test_language_model.c  test_matrix_helpers.h  test_memory_pool.c  test_metal_stabilizer.c  test_metal_syndrome.c  test_mnist_accelerate.c  test_mnist_cpu.c  test_mnist_metal.c  test_mnist_quantum_learning.c  (+54 more)
tests/mocks/: mock_quantum_state.c  mock_quantum_state.h
tests/utils/: test_helpers.c  test_helpers.h
(+352 files in other folders)
